2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : quick csc build fix (tested on mcs as well).

2005-01-23  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com>
        * NpgsqlTypes/NpgsqlTypes.cs,
        Npgsql.dll.sources,
        Npgsql/NpgsqlParameter.cs,
        Npgsql/NpgsqlConnection.cs,
        Npgsql/NpgsqlCommand.cs,
        Npgsql/NpgsqlParameterCollection.cs,
        Makefile: Removed System.Drawing, System.Windows.Forms and System.Design dependency.
        * NpgsqlTypes/NpgsqlTypesHelper.cs: Added patch for gborg 1121. Thanks regmaster (regmaster at gmx dot li) and torben (torben-spam-npsql at nehmer dot net) for patch.

2005-01-21  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com>
        * NpgsqlTypes/NpgsqlDbType.cs,
        NpgsqlTypes/NpgsqlTypesHelper.cs: Added support for Varchar datatype. Removed Internal data type enum. It is not supported yet.
        * Npgsql/PGUtil.cs,
        Npgsql/PGUtil.resx: (WriteString) Added support for logging what string is being written to database server.
        * Npgsql/NpgsqlCommand.cs: Added SingleRow behavior support. 
        gborg 1099. Added support for record return type functions. Thanks neri and Michel for heads up and tests.
        Fixed record function bug when function had many parameters. Thanks Neri (neri at gborg dot postgresql dot org) for heads up.
        * Npgsql/NpgsqlCommandBuilder.cs,
        NpgsqlDataAdapter.cs: Applied patch to fix gborg 1095. Thanks Eric van der Gutten (ericvdg at ananzi dot co dot za).
        * Npgsql/NpgsqlDataReader.cs: Removed type conversions for GetXXX() methods.
        
        

2004-12-20  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com>
        * Npgsql/NpgsqlCommand.cs: gborg 1099. Added support for record return type functions. Thanks neri and Michel for heads up and tests.
        * Npgsql/NpgsqlDataReader.cs: Removed type conversions for GetXXX() methods.