@@ -9,7 +9,6 @@ LIBRARY_SNK = Npgsql/Npgsql.snk
 LIB_MCS_FLAGS = /r:$(corlib) /r:System.dll /r:System.Xml.dll \
 		/r:System.Data.dll  \
 		/r:Mono.Security.dll \
-		/d:__MonoCS__ \
 		@Npgsql.dll.resources
 
 TEST_MCS_FLAGS = /r:$(corlib) /r:System.dll /r:System.Xml.dll \
